deploy: e3b5cd105a804cef929cd765f7f0c812bce48827

--- a/building-a-pc/index.html
+++ b/building-a-pc/index.html
@@ -13,7 +13,7 @@ part list) and its compatibility check was perhaps the most informative
 resource. My process wasn&rsquo;t very scientific and I even splurged on the CPU. I
 did make sure to pick a motherboard, CPU, and PSU could support more GPUs or
 other PCIe devices in the future. In researching which GPU to use I defaulted
-to the judgment outlined in the following: <a href=http://timdettmers.com/2018/11/05/which-gpu-for-deep-learning/>Which GPU(s) to Get for Deep Learning: &mldr;</a></p><p>A few things needed for setup include: a grounding cable, thermal paste,
+to the judgment outlined in the following: <a href=https://timdettmers.com/2020/09/07/which-gpu-for-deep-learning/>Which GPU(s) to Get for Deep Learning: &mldr;</a></p><p>A few things needed for setup include: a grounding cable, thermal paste,
 isopropyl alcohol, and a magnetic screw set. The grounding cable is worn at all
 times during assembly. The thermal paste is to facilitate the heat transfer between
 the CPU and the cooler. The Corsair H100i v2 came with some thermal paste on
